--- a/style/offer.scss
+++ b/style/offer.scss
@@ -23,7 +23,7 @@ body {
     width: 100%;
     padding-top: 10px;
   }
-  @include rwd(768){
+  @include rwd(768) {
     height: auto;
     margin: 0;
     padding: 0 0 10px 10px;
@@ -31,10 +31,10 @@ body {
   }
   a {
     img {
-      margin-top: 10px;
       width: 130px;
       height: 160px;
-      @include rwd(768){
+      margin-top: 10px;
+      @include rwd(768) {
         width: 30px;
         height: 40px;
       }
@@ -80,8 +80,7 @@ body {
       img {
         width: 18px;
         height: 20px;
-        margin-right: 10px;
-        margin-top: 0;
+        margin: 0 10px 0 0;
       }
     }
     .checkout {
@@ -105,13 +104,13 @@ body {
     @include rwd(768) {
       width: 76px;
       height: 28px;
+      margin: 30px 5px 5px 0;
       display: block;
       background: url(../img/online/menu.jpg) center center;
       border: 1px solid #000000;
       position: absolute;
       right: 0;
       bottom: 0;
-      margin: 30px 5px 5px 0;
       font-size: 13px;
       line-height: 28px;
       text-align: center;
@@ -148,8 +147,8 @@ body {
           }
         }
         .item_llst {
-          display: none;
           padding: 10px 0;
+          display: none;       
           p {
             padding: 10px 0;
             display: flex;
@@ -157,7 +156,7 @@ body {
             justify-content: center;
             animation: aa 0.5s forwards;
             background-color: #97999b;
-            @include rwd(768){
+            @include rwd(768) {
               animation: aaaa 0.5s forwards;
             }
             &:hover {
@@ -180,9 +179,9 @@ body {
   display: flex;
   a {
     width: 50%;
+    margin: 0 5px;
     display: flex;
     background-color: #97999b;
-    margin: 0 5px;
   }
   .website_item,
   .checkout_item {
@@ -227,8 +226,8 @@ body {
       display: none;
     }
     li {
-      padding: 10px 0;
       height: 60px;
+      padding: 10px 0;
       cursor: pointer;
       &:hover {
         .about_us,
@@ -283,7 +282,7 @@ body {
         }
       }
       animation: aa 0.5s;
-      @include rwd(768){
+      @include rwd(768) {
         animation: aaaa 0.5s;
       }
       p {
@@ -501,18 +500,20 @@ body {
     }
   }
 }
+
 // rooms_title
-.rooms_title{
+.rooms_title {
   width: 1200px;
   margin: 0 auto;
   padding-left: 50px;
-  h2{
+  h2 {
     font-weight: bolder;
   }
-  p{
+  p {
     padding: 10px 0 10px 10px;
   }
 }
+
 // rooms_calendar
 .rooms_calendar {
   width: 1000px;
@@ -526,7 +527,6 @@ body {
   }
   @include rwd(768) {
     max-width: auto;
-
   }
   @include rwd(550) {
     max-width: auto;
@@ -555,12 +555,12 @@ body {
     }
   }
   header {
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    border-radius: 20px 20px 0 0 ;
-    &:hover{
+    border-radius: 20px 20px 0 0;
+    &:hover {
       background: #c4dff6;
     }
   }
@@ -569,8 +569,8 @@ body {
     align-items: center;
   }
   .header-display p {
-    color: var(--accent);
     margin: 5px;
+    color: var(--accent);
     font-size: 1.2rem;
     word-spacing: 0.5rem;
   }
@@ -583,18 +583,18 @@ body {
   }
   .days,
   .week {
+    margin: auto;
     display: grid;
     border: 1px solid #000;
     grid-template-columns: repeat(7, 1fr);
-    margin: auto;
     justify-content: space-between;
   }
   .week div,
   .days div {
+    height: 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 3rem;
     border: 1px solid #000;
     position: relative;
   }
@@ -639,10 +639,10 @@ body {
   margin: 0 auto;
   padding-left: 10px;
   .rooms_days {
+    padding: 100px 0 20px 0;
     display: flex;
     justify-content: space-evenly;
     position: relative;
-    padding: 100px 0 20px 0;
     .form-group {
       display: flex;
       select {
@@ -667,10 +667,10 @@ body {
       }
     }
     .middle {
-      border-right: 1px dotted #787878;
       width: 1px;
       height: 30px;
       margin: 15px 5px 0;
+      border-right: 1px dotted #787878;
     }
     .rooms {
       display: flex;
@@ -688,10 +688,10 @@ body {
   }
   .Next {
     width: auto;
-    display: flex;
-    justify-content: end;
     padding-bottom: 100px;
     margin-right: 20px;
+    display: flex;
+    justify-content: end;
     p {
       padding: 10px 40px;
       background-color: #97999b;
@@ -759,8 +759,8 @@ body {
 
 // footer
 .footer {
-  background: #eeeeee;
   margin: 0 auto;
+  background: #eeeeee;
   padding-bottom: 20px;
   border-bottom: 10px solid #1a1a1a;
   display: flex;
