--- a/style/footer.css
+++ b/style/footer.css
@@ -186,9 +186,7 @@ img {
 .footer .footer_box {
   width: 100%;
   width: 100%;
-  padding: 103px 0 90px;
-  padding-left: calc(20px + 5.7%);
-  padding-right: 12%;
+  padding: 103px 12% 90px calc(20px + 5.7%);
   position: relative;
   background: #bae1d0;
   border-bottom-right-radius: 15px;
