--- a/style/footer.scss
+++ b/style/footer.scss
@@ -15,9 +15,7 @@
     .footer_box {
       width: 100%;
       width: 100%;
-      padding: 103px 0 90px;
-      padding-left: calc(20px + 5.7%);
-      padding-right: 12%;
+      padding: 103px 12% 90px calc(20px + 5.7%);
       position: relative;
       background: #bae1d0;
       border-bottom-right-radius: 15px;
@@ -38,7 +36,6 @@
           justify-content: center;
         }
         @include rwd(840) {
-          // flex-wrap: nowrap;
           justify-content: center;
           align-items: center;
         }
